# gait_device

./: .gitignore  CLAUDE.md  CMakeLists.txt  Kconfig  README.md  demo_start.sh  diagnostic_imu_analysis.py  platformio.ini  prj.conf  prj_hello.conf  prj_hello_imu.conf  prj_sim.conf  prj_sim.overlay  step2_zerocross_diagnostic.py
.claude/agents/: attorney-A.md  attorney-B.md  judicial-clerk.md  package-manager.md  plotter.md  simulator-operator.md  stage-compactor.md  uart-reader.md
.claude/commands/: hear.md  plot-evidence.md  plot-profile.md  session.md  toolchain.md
arduino/ble_counter_test/: ble_counter_test.ino
arduino/ble_gait/: ble_gait.ino  imu_types.h  phase_segmenter.h  rolling_window.cpp  rolling_window.h  step_detector.cpp
arduino/ble_imu_test/: ble_imu_test.ino
arduino/gait_algo_test/: gait_algo_test.ino  phase_segmenter.cpp  step_detector.h
arduino/imu_smoke_test/: xiao_imu_test.ino
boards/: xiao_ble_sense.json  xiao_ble_sense.overlay
docs/: algorithm_hunting_stair_walker.md  amendments.md  bug_receipt.md  case_law.md  handoff.md  hw_bom.md  toolchain_config.md
docs/executive_branch_document/: handoff.md  sw_bom.md
docs/gaitsense_code/: amendments.md  case_law.md  (+3 more)
firmware/: zephyr_sim_2026-03-28.elf
host_tool/: download_session.py
renode/: gait_device.resc  gait_nrf52840.repl  lsm6ds3_stub.py  sim_imu_stub.py  sim_uart_stub.py
scripts/: ble_console.py  ble_debug.py  generate_report.py  link_app_lib.py  plot_gyr_terrain_emd.py  plot_option_c_si_comparison.py  plot_option_c_stance_swing.py  plot_si_comparison.py  plot_swing_stance_comparison.py  renode_test_template.py  run_standard_stairs.py  test_all_profiles.py  test_all_profiles_full.py  test_ble_export.py  test_flat_only.py  test_renode_smoke.py  test_sine_wave.py  test_slope_100.py  test_stairs_100.py  test_uart_dirac.py
simulator/: app.py  firmware_sim.elf  gait_algorithm.py  imu_model.py  pipeline.py  plot_high_si_bug013_infected.py  plot_high_si_stance_timing.py  renode_bridge.py  run_high_si_bug013_infected.py  run_high_si_renode.py  signal_analysis.py  terrain_aware_step_detector.py  walker_model.py
src/: hello_counter.c  hello_imu.c  main.c
zephyr/: CMakeLists.txt  Kconfig  prj.conf
zephyr/boards/: nrf52840dk_nrf52840.overlay
(+46 files in other folders)
